# gpt4tg

./: .gitignore  dockerfile  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docker-publish.yml
bot/: __main__.py
bot/config/: config.py  logging_config.py  prompt.txt
bot/core/: common.py  handlers.py  init.py  llm.py
bot/db/: activate.py  chat.py  db.py  models.py  username.py
bot/funcs/: activate.py  base.py  chatbot.py  commands.py
bot/models/: genai.py  gpt.py
bot/tools/: fetch_url.py  web_search.py
config/: config.py  logging_config.py  prompt.txt
core/: jsondb.py  tg.py
db/: activate.py  chat.py  models.py  username.py
func/: activate.py  genai.py  gpt.py  gpt_commands.py  jsondb.py  msg.py  prompt.py
models/: genai.py  gpt.py
